# Adventure

JeuAventure/: Bootstrap.bat  CMakelists.txt
JeuAventure/Audio/: CMakeLists.txt
JeuAventure/Audio/include/: AudioManager.cpp  AudioManager.h  MusicPlayer.cpp  MusicPlayer.h  SoundEffect.cpp  SoundEffect.h  TextureCache.cpp  TextureCache.h  readme.txt
JeuAventure/Entities/: CMakelists.txt
JeuAventure/Entities/include/: Enemy.h  Entity.h  Objects.h  Player.h
JeuAventure/Entities/src/: Enemy.cpp  Entity.cpp  Objects.cpp  Player.cpp
JeuAventure/Features/: CMakeLists.txt
JeuAventure/Features/include/: Ability.h  Collider.h  CollisionManager.h  CombatManager.h  DamageSystem.h  Hitbox.h  PhysicsEngine.h
JeuAventure/Features/src/: Ability.cpp  Collider.cpp  CollisionManager.cpp  CombatManager.cpp  DamageSystem.cpp  Hitbox.cpp  PhysicsEngine.cpp
JeuAventure/Graphics/: CMakeLists.txt
JeuAventure/Graphics/include/: Animation.h  Camera.h  Render.h
JeuAventure/Graphics/src/: Animation.cpp  Camera.cpp  Render.cpp
JeuAventure/Ressources/: data.json
JeuAventure/Ressources/Level_1/: data.json
JeuAventure/Ressources/Level_2/: data.json
JeuAventure/Ressources/Ressources/: allData.json
JeuAventure/States/: CMakelists.txt
JeuAventure/States/include/: GameOverState.h  GameState.h  MenuState.h  PauseState.h  State.h
JeuAventure/States/src/: GameOverState.cpp  GameState.cpp  MenuState.cpp  PauseState.cpp  State.cpp
JeuAventure/System/: CMakeLists.txt
JeuAventure/System/include/: Application.h  Game.h  StateManager.h
JeuAventure/System/src/: Application.cpp  Game.cpp  StateManager.cpp
JeuAventure/UI/: CMakeLists.txt
JeuAventure/UI/include/: DialogSystem.h  HUD.h  Menu.h  UIElements.h  UIManager.h  Widget.h
JeuAventure/UI/src/: DialogSystem.cpp  HUD.cpp  Menu.cpp  UIElements.cpp  UIManager.cpp  Widget.cpp
JeuAventure/Utils/: CMakeLists.txt
JeuAventure/Utils/include/: EventSystem.h  InputManager.h  RessourceManager.h  SaveSystem.h
JeuAventure/Utils/src/: EventSystem.cpp  InputManager.cpp  RessourceManager.cpp  SaveSystem.cpp
JeuAventure/World/: CMakelists.txt
JeuAventure/World/include/: Background.h  Checkpoint.h  Level.h  LevelLoader.h  Tilemap.h
JeuAventure/World/src/: Background.cpp  Checkpoint.cpp  Level.cpp  LevelLoader.cpp  Tilemap.cpp
JeuAventure/resources/Level_0/: data.json
JeuAventure/sample/: CMakelists.txt
JeuAventure/sample/src/: main.cpp
